--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/faker": "^6.6.9",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.3",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/cors": "^2.8.12",
+    "@types/cryptr": "^4.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
